use AExpressionTranslation for arithmetic operations